[package]
name = "chainx-cli"
version = "2.0.0-alpha.0"
authors = ["The ChainX Authors"]
edition = "2018"
description = "Rust Command Line Interface for ChainX 2.0 based on substrate-subxt"
readme = "README.md"
license = "LICENSE"

[[bin]]
name = "chainx-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "chainx-verify"
path = "src/bin/verify/mod.rs"

[dependencies]
async-trait = "0.1.49"
anyhow = "1.0"
async-std = { version = "1.6.2", features = ["attributes"] }
codec = { package = "parity-scale-codec", version = "2.0", default-features = false, features = ["derive", "full"] }
env_logger = "0.8.1"
hex = "0.4"
jsonrpsee = { version = "0.1", features = ["ws"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
subxt = { package = "substrate-subxt", git = "https://github.com/chainx-org/substrate-subxt", branch = "develop" }

sc-cli = { git = "https://github.com/paritytech/substrate", rev = "925f170d1a1f588cf61d7a366c2d744dd16392a6", optional = true }

frame-support = { git = "https://github.com/paritytech/substrate", rev = "925f170d1a1f588cf61d7a366c2d744dd16392a6" }
sp-authority-discovery = { git = "https://github.com/paritytech/substrate", rev = "925f170d1a1f588cf61d7a366c2d744dd16392a6" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", rev = "925f170d1a1f588cf61d7a366c2d744dd16392a6" }
sp-core = { git = "https://github.com/paritytech/substrate", rev = "925f170d1a1f588cf61d7a366c2d744dd16392a6" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", rev = "925f170d1a1f588cf61d7a366c2d744dd16392a6" }
sp-keyring = { git = "https://github.com/paritytech/substrate", rev = "925f170d1a1f588cf61d7a366c2d744dd16392a6" }
sp-runtime = { git = "https://github.com/paritytech/substrate", rev = "925f170d1a1f588cf61d7a366c2d744dd16392a6" }

pallet-indices = { git = "https://github.com/paritytech/substrate", rev = "925f170d1a1f588cf61d7a366c2d744dd16392a6" }
pallet-im-online = { git = "https://github.com/paritytech/substrate", rev = "925f170d1a1f588cf61d7a366c2d744dd16392a6" }

[features]
default = ["sc-cli"]
