[package]
name = "chainx-cli"
version = "4.0.0"
authors = ["The ChainX Authors"]
edition = "2018"
description = "Rust Command Line Interface for ChainX 2.0 based on substrate-subxt"
readme = "README.md"
license = "LICENSE"

[[bin]]
path = "src/bin/regenesis.rs"
name = "regenesis"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-std = { version = "1.9.0", features = ["attributes", "tokio1"] }
env_logger = "0.9.0"
codec = { package = "parity-scale-codec", version = "2", default-features = false, features = ["derive", "full", "bit-vec"] }
hex = "0.4.3"
sp-core = { package = "sp-core", git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.11" }
sp-keyring = { package = "sp-keyring", git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.11" }
structopt = "0.3.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

subxt = { git = "https://github.com/chainx-org/substrate-subxt.git", branch = "polkadot-v0.9.11" }
